# handling_legacy_code_in_cpp_with_runtime_polymorphism_kata

./: CMakeLists.txt  README.md  Solution.h  main.cpp
flight_library/: CMakeLists.txt  FlightEncoder.cpp  FlightEncoder.h  InternalDataStructure.h
